[tool.poetry]
name = "llm-hyperparam"
version = "0.1.0"
description = ""
authors = ["Jerzy Slomkowski <ext.jerzy.slomkowski@dsv.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
openai = "^1.58.1"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
